Updates logos, adds video, fixes layout issues

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -180,6 +180,14 @@ article
     margin: 0
     padding: 0
 
+  video
+    float: right
+    border: 1px solid silver
+    box-shadow: 1px 1px 3px silver
+    padding: 3px
+    margin: 1em 0 1em 1em
+    width: 50%
+
 .imgBox
   background-position: center center
   background-repeat: no-repeat
